--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="not-found">
-            <img src="404.png">
+            <img src="pictures/404.png">
             <p>Oops! Invalid location :/</p>
         </div>
 
